--- a/loveforu/pubspec.yaml
+++ b/loveforu/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_line_sdk: ^2.6.1
   flutter_dotenv: ^5.1.0
+  http: ^1.2.1
+  image_picker: ^1.1.1
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
