--- a/loveforu/pubspec.yaml
+++ b/loveforu/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_line_sdk: ^2.6.1
   flutter_dotenv: ^5.1.0
   http: ^1.2.1
-  image_picker: ^1.1.1
+  camera: ^0.11.0+1
   mime: ^1.0.5
 
 dev_dependencies:
